tests/should_fail/syntax_assign_to_expr.nv
module main

// SHOULD FAIL: assign to a non-assignable expression (rhs of binop)
fn foo() -> Int { return 1 }
foo() + 1 = 5
